--- a/src/index.scss
+++ b/src/index.scss
@@ -3,5 +3,5 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F5F5F5 !important;
+  background-color: #f5f5f5 !important;
 }
